--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Copy new signatures to gta-sig-db and deduplicate
         run: |
-          cp gtav-sigscan/signatures.json gta-sig-db/new_signatures.json
+          cp ../gtav-sigscan/signatures.json gta-sig-db/new_signatures.json
           python gta-sig-db/update_signatures.py
         working-directory: gta-sig-db
 
