--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -23,23 +23,18 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y g++ cmake ninja-build
 
+      - name: Clone private repository using PAT
+        run: |
+          git clone https://x-access-token:${{ secrets.GTA_SAMPLE_PAT }}@github.com/yubie-re/gta5-sig-samples.git files
+          rm -rf files/.git
+        working-directory: gtav-sigscan
+
       - name: Build the gtav-sigscan tool
         run: |
           cd gtav-sigscan
           cmake -S . -B build -G Ninja
           cmake --build build
 
-      - name: Clone gta5-sig-samples into gtav-sigscan/files
-        run: |
-          mkdir files
-          git clone --depth 1 https://github.com/yubie-re/gta5-sig-samples.git files
-          rm -rf files/.git
-        env:
-          GIT_TERMINAL_PROMPT: '0'  # Disable git prompt
-          GIT_ASKPASS: 'echo'
-          GIT_HTTPS_USERNAME: 'x-access-token'
-          GIT_HTTPS_PASSWORD: ${{ secrets.GTA_SAMPLE_PAT }}
-        working-directory: gtav-sigscan
 
       - name: Run the gtav-sigscan tool to generate new signatures
         run: |
