--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y curl
+          mkdir gtav-sigscan
 
       - name: Clone private repository using PAT
         run: |
