--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -47,6 +47,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.9'
+      - name: Upload signature json standalone
+        uses: actions/upload-artifact@v4
+        with:
+          path: gtav-sigscan/signatures.json
 
       - name: Copy new signatures to gta-sig-db and deduplicate
         run: |
