--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -29,7 +29,7 @@ jobs:
             - name: Upload signature JSON artifact
               uses: actions/upload-artifact@v4
               with:
-                  path: gtav-sigscan/signatures.json
+                  path: signatures.json
 
             - name: Checkout gta-sig-db repository
               uses: actions/checkout@v4
@@ -43,7 +43,8 @@ jobs:
 
             - name: Copy new signatures to gta-sig-db and deduplicate
               run: |
-                  cp gtav-sigscan/signatures.json gta-sig-db/sig-workflow/signatures.json
+                  cp signatures.json gta-sig-db/sig-workflow/signatures.json
+                  cd gta-sig-db/sig-workflow
                   python gta-sig-db/sig-workflow/update_signatures.py
 
             - name: Commit and push changes if there are updates
