--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -2,11 +2,11 @@ name: Update GTA V Signature Database
 
 on:
   workflow_dispatch:
-#    schedule:
-#        - cron: "0 16 * * *" # Runs every day at 4pm UTC (12pm EST)
-#    push:
-#        branches:
-#            - main
+  schedule:
+      - cron: "0 16 * * *" # Runs every day at 4pm UTC (12pm EST)
+  push:
+      branches:
+          - main
 
 jobs:
     update-signatures:
