feat: implement pcros/pcrosalt dataset switching with redesigned navigation

--- a/.github/workflows/build_svelte.yml
+++ b/.github/workflows/build_svelte.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: 'main'
+    branches: ['main']
 
 jobs:
   build_site:
@@ -28,7 +28,7 @@ jobs:
 
       - name: build
         env:
-          BASE_PATH: '/${{ github.event.repository.name }}'
+          BASE_PATH: '/${{ github.event.repository.name }}/site-src'
         run: |
           npm run build
 
