fix: update BASE_PATH in build step to use frontend-src

--- a/.github/workflows/build_svelte.yml
+++ b/.github/workflows/build_svelte.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: build
         env:
-          BASE_PATH: '/${{ github.event.repository.name }}/site-src'
+          BASE_PATH: '/${{ github.event.repository.name }}/frontend-src'
         run: |
           npm run build
 
