--- a/.github/workflows/build_svelte.yml
+++ b/.github/workflows/build_svelte.yml
@@ -21,7 +21,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+          cache: 'npm'
+          cache-dependency-path: 'frontend-src/package-lock.json'
 
       - name: Install dependencies
         working-directory: frontend-src
