--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -45,7 +45,7 @@ jobs:
               uses: actions/checkout@v4
               with:
                   path: gta-sig-db
-                  token: ${{ steps.app.outputs.token }}
+                  token: ${{ steps.app-token.outputs.token }}
 
             - name: Setup Python
               uses: actions/setup-python@v5
